--- a/pdb/pdb_res.qrc
+++ b/pdb/pdb_res.qrc
@@ -1,21 +1,14 @@
 <RCC>
     <qresource prefix="/images">
-        <file>images/add2.ico</file>
         <file>images/new.png</file>
-        <file>images/tree.ico</file>
         <file>images/drag_node.png</file>
         <file>images/no_drag_node.png</file>
-        <file>images/question.ico</file>
         <file>images/branch-closed.png</file>
         <file>images/branch-end.png</file>
         <file>images/branch-more.png</file>
         <file>images/branch-open.png</file>
         <file>images/vline.png</file>
-        <file>images/exit.ico</file>
-        <file>images/replace.ico</file>
-        <file>images/information2.ico</file>
         <file>images/chest.png</file>
-        <file>images/save.ico</file>
         <file>images/shield_add.png</file>
         <file>images/shield_delete.png</file>
         <file>images/shield.png</file>
@@ -41,5 +34,13 @@
         <file>images/view.png</file>
         <file>images/lock.png</file>
         <file>images/lock_open.png</file>
+        <file>images/tree.png</file>
+        <file>images/tree_delete.png</file>
+        <file>images/tree_rename.png</file>
+        <file>images/find.png</file>
+        <file>images/exit.png</file>
+        <file>images/information2.png</file>
+        <file>images/disk_green.png</file>
+        <file>images/replace.png</file>
     </qresource>
 </RCC>
