--- a/pdb/pdb_res.qrc
+++ b/pdb/pdb_res.qrc
@@ -1,6 +1,5 @@
 <RCC>
     <qresource prefix="/images">
-        <file>images/new.png</file>
         <file>images/drag_node.png</file>
         <file>images/no_drag_node.png</file>
         <file>images/branch-closed.png</file>
@@ -42,5 +41,6 @@
         <file>images/information2.png</file>
         <file>images/disk_green.png</file>
         <file>images/replace.png</file>
+        <file>images/data_disk.png</file>
     </qresource>
 </RCC>
