add backup to the DBsettings in configurator. Remove old config firstgit status

--- a/pdb/passworddlg.ui
+++ b/pdb/passworddlg.ui
@@ -6,13 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>450</width>
-    <height>228</height>
+    <width>500</width>
+    <height>227</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>500</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>450</width>
+    <width>500</width>
     <height>228</height>
    </size>
   </property>
@@ -35,9 +41,9 @@
   <widget class="QLineEdit" name="m_EnterPasswdLineEdit1">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>90</x>
      <y>40</y>
-     <width>271</width>
+     <width>371</width>
      <height>24</height>
     </rect>
    </property>
@@ -71,9 +77,9 @@
   <widget class="QLineEdit" name="m_EnterPasswdLineEdit2">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>90</x>
      <y>90</y>
-     <width>271</width>
+     <width>371</width>
      <height>24</height>
     </rect>
    </property>
@@ -81,9 +87,9 @@
   <widget class="QLineEdit" name="m_EnterPasswdLineEdit3">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>90</x>
      <y>140</y>
-     <width>271</width>
+     <width>371</width>
      <height>24</height>
     </rect>
    </property>
