--- a/pdb/pdb_res.qrc
+++ b/pdb/pdb_res.qrc
@@ -44,5 +44,19 @@
         <file>images/data_disk.png</file>
         <file>images/expand_subtree.png</file>
         <file>images/collapse_subtree.png</file>
+        <file>images/hand_paper.png</file>
+        <file>images/save_as.png</file>
+        <file>images/printer.png</file>
+        <file>images/printer_view.png</file>
+        <file>images/document_into.png</file>
+        <file>images/textbold.png</file>
+        <file>images/textitalic.png</file>
+        <file>images/textunder.png</file>
+        <file>images/textcenter.png</file>
+        <file>images/textjustify.png</file>
+        <file>images/textleft.png</file>
+        <file>images/textright.png</file>
+        <file>images/undo.png</file>
+        <file>images/redo.png</file>
     </qresource>
 </RCC>
