--- a/pdb/dlginserttable.ui
+++ b/pdb/dlginserttable.ui
@@ -6,17 +6,17 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>363</width>
+    <width>427</width>
     <height>188</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>250</x>
      <y>120</y>
      <width>168</width>
      <height>58</height>
@@ -39,12 +39,12 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>8</x>
      <y>21</y>
-     <width>345</width>
+     <width>411</width>
      <height>87</height>
     </rect>
    </property>
