--- a/pdb/mainwindow.ui
+++ b/pdb/mainwindow.ui
@@ -144,7 +144,7 @@
      </size>
     </property>
     <property name="text">
-     <string>Node comments</string>
+     <string>Node descriptor</string>
     </property>
    </widget>
    <widget class="QLabel" name="m_AttachmentLabel">
