--- a/pdb/dlgscanimage.ui
+++ b/pdb/dlgscanimage.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>248</width>
+    <width>850</width>
     <height>151</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>850</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Scan image</string>
