--- a/pdb/dlgsavescan.ui
+++ b/pdb/dlgsavescan.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>560</width>
-    <height>139</height>
+    <height>186</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,17 +19,23 @@
      <x>10</x>
      <y>10</y>
      <width>541</width>
-     <height>111</height>
+     <height>121</height>
     </rect>
    </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
    <property name="title">
-    <string/>
+    <string>Saving parameters for scanned image</string>
+   </property>
+   <property name="flat">
+    <bool>false</bool>
    </property>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>20</y>
+      <y>30</y>
       <width>131</width>
       <height>16</height>
      </rect>
@@ -42,8 +48,8 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>10</y>
-      <width>231</width>
+      <y>20</y>
+      <width>381</width>
       <height>24</height>
      </rect>
     </property>
@@ -51,44 +57,18 @@
    <widget class="QComboBox" name="comboExtentions">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>10</y>
-      <width>141</width>
+      <x>320</x>
+      <y>50</y>
+      <width>211</width>
       <height>24</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="buttonSave">
-    <property name="geometry">
-     <rect>
-      <x>268</x>
-      <y>80</y>
-      <width>111</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Save</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="buttonCancel">
-    <property name="geometry">
-     <rect>
-      <x>390</x>
-      <y>80</y>
-      <width>141</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Cancel</string>
     </property>
    </widget>
    <widget class="QSlider" name="QualitySlider">
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>40</y>
+      <y>80</y>
       <width>381</width>
       <height>16</height>
      </rect>
@@ -104,7 +84,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>40</y>
+      <y>80</y>
       <width>111</width>
       <height>16</height>
      </rect>
@@ -117,7 +97,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>60</y>
+      <y>100</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -134,7 +114,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>490</x>
-      <y>50</y>
+      <y>90</y>
       <width>41</width>
       <height>20</height>
      </rect>
@@ -147,6 +127,48 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;High&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
+   <widget class="QCheckBox" name="defaultExtCheckBox">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>50</y>
+      <width>161</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="text">
+     <string>set default  extension</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QPushButton" name="buttonCancel">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>150</y>
+     <width>141</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="buttonSave">
+   <property name="geometry">
+    <rect>
+     <x>278</x>
+     <y>150</y>
+     <width>111</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Save</string>
+   </property>
   </widget>
  </widget>
  <resources/>
